--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 
 # Site settings
 title: eRegistrations
+main_title: Help eRegistrations
 email: meluxford@meluxford.com
 description: > # this means to ignore newlines until "baseurl:"
   This is a test site. Like... you know, everything is testing, experimentations and failures and successes.
